@@ -20,7 +20,10 @@
   *      -# Re-add interrupt Pipe/Endpoint support
   *      -# Add HID report macros to make HID report editing easier
   *      -# Investigate dynamically created device descriptors
-  *      -# Check if ALL the workaround reg save/restore code in the unordered EP config is required
+  *  - Known Bugs
+  *      -# Errors with AVRISP-MKII program with full EEPROM programming on the ATMEGA8 (and others?)
+  *      -# No wakeup when plugged into hub, and hub plugged into host
+  *      -# Incomplete TMC class demo errors
   *  - Documentation/Support
   *      -# Add detailed overviews of how each demo works
   *      -# Add board overviews
