@@ -38,6 +38,8 @@
   *   - Fixed broken HID_REQ_GetReport request handler in the Low Level GenericHID demo
   *   - Fixed possible lost data in the XPLAINBridge, USBtoSerial and Benito projects when the host exceeds the packet
   *     timeout period on received packets as set by USB_STREAM_TIMEOUT_MS (thanks to Justin Rajewski)
+  *   - Fixed possible programming problem in the AVRISP-MKII clone project when programming specific patterns into a target
+  *     memory space that is only byte (not page) addressable
   *
   *  \section Sec_ChangeLog101122 Version 101122
   *  <b>New:</b>
